update in change password

--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -36,10 +36,10 @@
                             <a class="nav-link active" href="/Customer/Home/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Customer/Home/About">About</a>
+                            <a class="nav-link" href="/Customer/Home/Index">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Customer/Home/Contact">Contact</a>
+                            <a class="nav-link" href="/Customer/Home/Index">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav align-items-center">
