--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
             @RenderBody()
         </div>
     </main>
-    <footer class="mb-0">
+    <footer class="mb-0 bg-light bg-opacity-50">
         <div class="container">
             &copy; 2025 - InstaStay
             <br />
