--- a/InstaStay/Areas/Admin/Views/DashBoard/AddAdmin.cshtml
+++ b/InstaStay/Areas/Admin/Views/DashBoard/AddAdmin.cshtml
@@ -3,32 +3,14 @@
 @{
     ViewData["Title"] = "Register";
 }
-<div class="row justify-content-center">
+<div class="row justify-content-center my-3">
     <div class="col-md-6">
         <div class="card shadow">
             <div class="card-body p-4">
-                <h4 class="card-title text-center mb-3">Create Your Account</h4>
-
-                <!-- Social Media Register Options -->
-                <div class="d-flex justify-content-center mb-4">
-                    <form id="external-account" asp-action="ExternalLogin" method="post" class="form-horizontal">
-
-                       <div>
-                            <p>
-                                @foreach (var provider in ViewBag.ExternalLogins!)
-                                {
-                                    
-
-                                    <button type="submit" class="btn btn-danger me-2 shadow-sm" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-google"></i> Register with @provider.DisplayName</button>
-                            }
-                        </p>
-                       </div>
-                  </form>
-                </div>
+                <h4 class="card-title text-center mb-3">Add Admin Account</h4>
                 <div class="text-center mb-3">
-                    <span>or</span>
                 </div>
-                <form asp-action="Register">
+                <form asp-action="AddAdmin" asp-controller="Dashboard" asp-area="Admin" >
                     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
                     <div class="form-group mb-3">
                         <label asp-for="UserName" class="form-label">
@@ -72,9 +54,6 @@
                         <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Re-enter your password" />
                         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                     </div>
-
-                   
-
                     <!-- Submit Button -->
                     <div class="form-group d-grid">
                         <button type="submit" class="btn btn-success btn-lg shadow-sm">
