--- a/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
@@ -37,7 +37,7 @@
             <a class="nav-link text-white" href="/Admin/DashBoard/Index"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
             <a class="nav-link text-white" href="/Admin/Dashboard/AddAdmin"><i class="fa-solid fa-user-plus me-2"></i>Add Admin</a>
             <a class="nav-link text-white" href="/Admin/Role/Role"><i class="fa-solid fa-circle-plus me-2"></i></i>Add Role</a>
-            <a class="nav-link text-white" href="/Users/Index"><i class="fas fa-users me-2"></i>Manage Users</a>
+            <a class="nav-link text-white" href="/Admin/User/Index"><i class="fas fa-users me-2"></i>Manage Users</a>
         </nav>
     </div>
 
