Edit Index user

--- a/InstaStay/Areas/Admin/Views/User/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/User/Index.cshtml
@@ -4,6 +4,21 @@
 
 @model IEnumerable<ApplicationUser>
 
+@section Scripts {
+
+    @if (@TempData["success"] != null)
+    {
+        <script>
+            toastr.success('@TempData["success"]')
+        </script>
+    }
+    @if (TempData["error"] != null)
+    {
+        <script>
+            toastr.error('@TempData["error"]')
+        </script>
+    }
+}
 
 
 @{
