--- a/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
@@ -38,6 +38,7 @@
             <a class="nav-link text-white" href="/Admin/Dashboard/AddAdmin"><i class="fa-solid fa-user-plus me-2"></i>Add Admin</a>
             <a class="nav-link text-white" href="/Admin/Role/Role"><i class="fa-solid fa-circle-plus me-2"></i></i>Add Role</a>
             <a class="nav-link text-white" href="/Admin/User/Index"><i class="fas fa-users me-2"></i>Manage Users</a>
+            <a class="nav-link text-white" href><i class="fas fa-envelope me-2"></i>User Requests</a>
         </nav>
     </div>
 
@@ -51,7 +52,7 @@
                 <div class="card text-white bg-primary mb-3">
                     <div class="card-body">
                         <h5 class="card-title">Total Users</h5>
-                        <p class="card-text fs-4">12,345</p>
+                        <p class="card-text fs-4">@_userManager.Users.Count()</p>
                     </div>
                 </div>
             </div>
