--- a/InstaStay/Areas/Admin/Views/User/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/User/Index.cshtml
@@ -10,7 +10,7 @@
     var allRoles = await roleManager.Roles.ToListAsync();
 }
 
-<h3 class="mb-4 bg-light">All Users</h3>
+<h3 class="m-3 text-center bg-dark text-info bg-transparent rounded-5">All Users</h3>
 
 @if (Model.Users == null || !Model.Users.Any())
 {
