--- a/InstaStay/Areas/Admin/Views/User/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
 <h3 class="m-3 text-center bg-dark text-info bg-transparent rounded-5">All Users</h3>
 
 
-<div class="mb-2">
+<div class="m-5">
     <form asp-action="SearchForUser" asp-controller="User" asp-area="Admin" method="post">
         <div class="col-md-3 d-flex">
             <input type="Text" class="form-control" placeholder="User Name Or Email" name="account" />
@@ -30,7 +30,7 @@
 }
 else
 {
-    <table class="table table-hover table-striped table-bordered">
+    <table class="table table-hover table-striped table-bordered m-3">
         <thead class="table-dark">
             <tr>
                 <th>User Name</th>
