--- a/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
@@ -38,7 +38,8 @@
             <a class="nav-link text-white" href="/Admin/Dashboard/AddAdmin"><i class="fa-solid fa-user-plus me-2"></i>Add Admin</a>
             <a class="nav-link text-white" href="/Admin/Role/Role"><i class="fa-solid fa-circle-plus me-2"></i></i>Add Role</a>
             <a class="nav-link text-white" href="/Admin/User/Index"><i class="fas fa-users me-2"></i>Manage Users</a>
-            <a class="nav-link text-white" href><i class="fas fa-envelope me-2"></i>User Requests</a>
+            <a class="nav-link text-white" href="/Admin/Report/Requests"><i class="fas fa-envelope me-2"></i>User Requests</a>
+            <a class="nav-link text-white" href="/Admin/Report/Index"><i class="fas fa-exclamation-circle me-2"></i>Complaints</a>
         </nav>
     </div>
 
