--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -33,10 +33,18 @@
                         <li class="nav-item ">
                             <a class="nav-link active" href="/Customer/Home/Index">About</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Hotel Manager"))
+                        {
+                            
+                            <li class="nav-item ">
+                                <a class="nav-link active" href="/hotelManager/ManageHotel/Index">Hotel Manager</a>
+                            </li>
+                        }
                         @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
                         { <li class="nav-item">
                             <a class="nav-link active" href="/Customer/Contact/Index">Contact</a>
                          </li>
+                            
                         }
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         { <li class="nav-item">
