--- a/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
+++ b/InstaStay/Areas/Admin/Views/DashBoard/Index.cshtml
@@ -40,6 +40,7 @@
             <a class="nav-link text-white" href="/Admin/User/Index"><i class="fas fa-users me-2"></i>Manage Users</a>
             <a class="nav-link text-white" href="/Admin/Report/Requests"><i class="fas fa-envelope me-2"></i>User Requests</a>
             <a class="nav-link text-white" href="/Admin/Report/Index"><i class="fas fa-exclamation-circle me-2"></i>Complaints</a>
+            <a class="nav-link text-white" href="/Admin/Report/HotelRequestes"><i class="fas fa-exclamation-circle me-2"></i>HotelReuestes</a>
         </nav>
     </div>
 
