--- a/InstaStay/Areas/Admin/Views/Report/HotelRequestes.cshtml
+++ b/InstaStay/Areas/Admin/Views/Report/HotelRequestes.cshtml
@@ -1,1 +1,39 @@
-﻿
+﻿@model IEnumerable<Models.Models.NewHotelRequests>
+@{
+    ViewData["Title"] = "Reports";
+}
+<h1 class="text-center">Hotel Requestes</h1>
+
+<table class="table table-striped table-bordered text-center align-content-sm-center mx-3">
+    <thead class="thead-dark">
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Address)</th>
+            <th>@Html.DisplayNameFor(model => model.Description)</th>
+            <th>@Html.DisplayNameFor(model => model.CoverImage)</th>
+            <th>@Html.DisplayNameFor(model => model.stars)</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                <td>@Html.DisplayFor(modelItem => item.CoverImage)</td>
+                <td>@Html.DisplayFor(modelItem => item.stars)</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">
+                        <i class="fas fa-check"></i> Accept
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">
+                        <i class="fas fa-trash"></i> Delete
+                    </a>
+                </td>
+            </tr>
+
+        }
+    </tbody>
+</table>
