--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -124,6 +124,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/toastr.Js/toastr.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script>
         const lightTheme = document.getElementById('light-theme');
         const darkTheme = document.getElementById('dark-theme');
