--- a/InstaStay/Areas/Admin/Views/Report/HotelRequestes.cshtml
+++ b/InstaStay/Areas/Admin/Views/Report/HotelRequestes.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Reports";
 }
-<h1 class="text-center">Hotel Requestes</h1>
+<h1 class="text-center">Hotel Requsts</h1>
 
 <table class="table table-striped table-bordered text-center align-content-sm-center mx-3">
     <thead class="thead-dark">
@@ -22,7 +22,9 @@
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                 <td>@Html.DisplayFor(modelItem => item.Address)</td>
                 <td>@Html.DisplayFor(modelItem => item.Description)</td>
-                <td>@Html.DisplayFor(modelItem => item.CoverImage)</td>
+                <td class="text-center">
+                    <img src="~/Images/HotelImages/@item.CoverImage" alt="@item.Name" class="rounded shadow-sm img-thumbnail" style="width: 100px; height: 100px; object-fit: cover;">
+                </td>
                 <td>@Html.DisplayFor(modelItem => item.stars)</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">
