--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         {
                             
                             <li class="nav-item ">
-                                <a class="nav-link active" href="/hotelManager/ManageHotel/Dashboard">Hotel Manager</a>
+                                <a class="nav-link active" href="/hotelManager/ManageHotel/Dashboard">Hotel Management</a>
                             </li>
                         }
                         @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
